# cargo-conflicting-dependencies

./: README.md
dep-with-newer-version/: Cargo.toml
dep-with-older-version/: Cargo.toml
top-crate/: Cargo.toml
